--- a/ассортимент_плодовые.html
+++ b/ассортимент_плодовые.html
@@ -20,7 +20,7 @@
 	                    <!--  -->
 <header class="site-header clearfix"> 
 	<img src="Images/logo.png"  alt="">
-		<h1 class="header1">Научно-консультационный садовый центр БашГАУ</h1>
+		<h1 class="header1">Научно-консультационный садовый центр</h1>
 
 	<nav class="main-menu">
 	    <ul>
