--- a/прайс.html
+++ b/прайс.html
@@ -28,7 +28,7 @@
 </header>
 <div>
   <ul class="widget-list">
-  	    <li><a href="https://drive.google.com/file/d/1L8R1en1JGj4j8kUMEGmEVpLaQ5QAqTyK/view?usp=sharing" target="blank_">Прайс на биопрепараты компании БашИнком,</a></li>
+     <li><a href="pdf/Прайс на биопрепараты.pdf" target="blank_">Прайс на биопрепараты компании БашИнком,</a></li>
 
     <li><a href="https://drive.google.com/file/d/1SxyAAL5IMwJ5KEzgOMPEJBKJ1wVyBJWf/view?usp=sharingl" target="blank">Прайс на декоративные и плодовые деревья, кустарники.</a></li>
 
