--- a/прайс.html
+++ b/прайс.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     	<link rel="stylesheet" href="css/css.css">
-	<title>Document</title>
+	<title>Садовый Центр</title>
 </head>
 
 <body>
@@ -30,27 +30,27 @@
   <ul class="widget-list">
      <li><a href="pdf/Прайс на биопрепараты.pdf" target="blank_">Прайс на биопрепараты компании БашИнком,</a></li>
 
-    <li><a href="https://drive.google.com/file/d/1SxyAAL5IMwJ5KEzgOMPEJBKJ1wVyBJWf/view?usp=sharingl" target="blank">Прайс на декоративные и плодовые деревья, кустарники.</a></li>
+    <li><a href="pdf/Прайс на декоративные и плодовые деревья, кустарники.pdf" target="blank">Прайс на декоративные и плодовые деревья, кустарники.</a></li>
 
-    <li><a href="https://drive.google.com/file/d/1NVtKzbX00Ix3O45tYr7g4vq8sLNFevfQ/view?usp=sharing" target="blank">Прайс на комнатные растения.</a></li>
+    <li><a href="pdf/Прайс на комнатные растения.pdf">Прайс на комнатные растения.</a></li>
   
 
-  <li><a href="https://drive.google.com/file/d/1NEeLZvj6imMOAm9t39gCcsTGJ1_aavol/view?usp=sharing" target="blank">Прайс на научную литературу.</a></li>
+  <li><a href="pdf/Прайс на научную литературу.pdf" target="blank">Прайс на научную литературу.</a></li>
 
 
-  <li><a href="https://drive.google.com/file/d/1oK5r6Rl7oXdjx9SO_klMGthbXI-v4I1b/view?usp=sharing" target="blank">Прайс на семена многолетних, лекарственных и ягодных культур.</a></li>
+  <li><a href="pdf/Прайс на семена многолетних, лекарственных и ягодных культур.pdf" target="blank">Прайс на семена многолетних, лекарственных и ягодных культур.</a></li>
 
 
-  <li><a href="https://drive.google.com/file/d/1oyxbK8h3IAd1OFzTHgDGV-SN_mUkZ4Oh/view?usp=sharing" target="blank">Прайс на семена овощных культур.</a></li>
+  <li><a href="pdf/Прайс на семена овощных культур.pdf" target="blank">Прайс на семена овощных культур.</a></li>
 
 
-  <li><a href="https://drive.google.com/file/d/1SovoP55UWweu68FGKcxB0QlnkwrCTMLK/view?usp=sharing" target="blank">Прайс на семена цветочных культур.</a></li>
+  <li><a href="pdf/Прайс на семена цветочных культур.pdf" target="blank">Прайс на семена цветочных культур.</a></li>
 
 
-  <li><a href="https://drive.google.com/file/d/1cakRziswBUmcR62pMk3XdspPYLPn61Si/view?usp=sharing" target="blank">Прайс на удобрения, почвогрунты и рассадный материал.</a></li>
+  <li><a href="pdf/Прайс на удобрения, почвогрунты и рассадный материал.pdf" target="blank">Прайс на удобрения, почвогрунты и рассадный материал.</a></li>
 
 
-  <li><a href="https://drive.google.com/file/d/12FUceRyIcmYhJ6FlDpFNhsu1glTx5YCU/view?usp=sharing" target="blank">Прайс на химические средства защиты растений и стимуляторы роста.</a></li>
+  <li><a href="pdf/Прайс на химические средства защиты и стимуляторы роста растений.pdf" target="blank">Прайс на химические средства защиты растений и стимуляторы роста.</a></li>
   </ul>
 
 </div>
