--- a/прайс.html
+++ b/прайс.html
@@ -30,27 +30,27 @@
   <ul class="widget-list">
      <li><a href="pdf/Прайс на биопрепараты.pdf" target="blank_">Прайс на биопрепараты компании БашИнком,</a></li>
 
-    <li><a href="pdf/Прайс на декоративные и плодовые деревья, кустарники.pdf" target="blank">Прайс на декоративные и плодовые деревья, кустарники.</a></li>
+    <li><a href="pdf/Прайс на декоративные и плодовые деревья, кустарники.pdf" target="blank_">Прайс на декоративные и плодовые деревья, кустарники.</a></li>
 
-    <li><a href="pdf/Прайс на комнатные растения.pdf">Прайс на комнатные растения.</a></li>
+    <li><a href="pdf/Прайс на комнатные растения.pdf target="blank_>Прайс на комнатные растения.</a></li>
   
 
-  <li><a href="pdf/Прайс на научную литературу.pdf" target="blank">Прайс на научную литературу.</a></li>
+  <li><a href="pdf/Прайс на научную литературу.pdf" target="blank_>Прайс на научную литературу.</a></li>
 
 
-  <li><a href="pdf/Прайс на семена многолетних, лекарственных и ягодных культур.pdf" target="blank">Прайс на семена многолетних, лекарственных и ягодных культур.</a></li>
+  <li><a href="pdf/Прайс на семена многолетних, лекарственных и ягодных культур.pdf" target="blank_">Прайс на семена многолетних, лекарственных и ягодных культур.</a></li>
 
 
-  <li><a href="pdf/Прайс на семена овощных культур.pdf" target="blank">Прайс на семена овощных культур.</a></li>
+  <li><a href="pdf/Прайс на семена овощных культур.pdf" target="blank_">Прайс на семена овощных культур.</a></li>
 
 
-  <li><a href="pdf/Прайс на семена цветочных культур.pdf" target="blank">Прайс на семена цветочных культур.</a></li>
+  <li><a href="pdf/Прайс на семена цветочных культур.pdf" target="blank_">Прайс на семена цветочных культур.</a></li>
 
 
-  <li><a href="pdf/Прайс на удобрения, почвогрунты и рассадный материал.pdf" target="blank">Прайс на удобрения, почвогрунты и рассадный материал.</a></li>
+  <li><a href="pdf/Прайс на удобрения, почвогрунты и рассадный материал.pdf" target="blank_">Прайс на удобрения, почвогрунты и рассадный материал.</a></li>
 
 
-  <li><a href="pdf/Прайс на химические средства защиты и стимуляторы роста растений.pdf" target="blank">Прайс на химические средства защиты растений и стимуляторы роста.</a></li>
+  <li><a href="pdf/Прайс на химические средства защиты и стимуляторы роста растений.pdf" target="blank_">Прайс на химические средства защиты растений и стимуляторы роста.</a></li>
   </ul>
 
 </div>
