--- a/контакты.html
+++ b/контакты.html
@@ -43,7 +43,7 @@
 <img class="img1" src="Images/флаер.jpg" width="300px" height="300px">
 <h4 class="map">Схема проезда</h4>
 <p class="map2">
-	<a href="https://yandex.ru/maps/172/ufa/?l=sat%2Cskl&ll=56.165171%2C54.878743&mode=usermaps&source=constructorLink&um=constructor%3Ac565b2a415c77108a314375220c14bdc16c117de4fcb009078bcc36761d1b823&z=9" target="blank">Яндекс карта</a>
+	<a href="https://yandex.ru/maps/172/ufa/house/ulitsa_50_letiya_oktyabrya_34/YUwYfw9jTEUEQFtufXtyeXhiYw==/?ll=55.982101%2C54.737621&z=16" target="blank">Яндекс карта</a>
 </p>
 <img src="Images/карта.png" width="1000px" height="700px">
 </main>
