--- a/контакты.html
+++ b/контакты.html
@@ -19,7 +19,7 @@
 
 	                    <!--  -->
 <header class="site-header clearfix"> 
-<img src="Images/logo.png"  alt="">	
+<img src="Images/Яндекс.png" width="1000px" height="700px">	
 		<h1 class="header1">Научно-консультационный садовый центр</h1>
 		
 	<nav class="main-menu">
