--- a/контакты.html
+++ b/контакты.html
@@ -19,7 +19,7 @@
 
 	                    <!--  -->
 <header class="site-header clearfix"> 
-	
+	<img src="Images/logo.png"  alt="">	
 		<h1 class="header1">Научно-консультационный садовый центр</h1>
 		
 	<nav class="main-menu">
