--- a/контакты.html
+++ b/контакты.html
@@ -43,7 +43,7 @@
 <img class="img1" src="Images/флаер.jpg" width="300px" height="300px">
 <h4 class="map">Схема проезда</h4>
 <p class="map2">
-	<a href="https://yandex.ru/maps/172/ufa/house/ulitsa_50_letiya_oktyabrya_34/YUwYfw9jTEUEQFtufXtyeXhiYw==/?ll=55.982101%2C54.737621&z=16" target="blank">Яндекс карта</a>
+	<a href="https://yandex.ru/maps/172/ufa/house/ulitsa_50_letiya_oktyabrya_34/YUwYfw9jTEUEQFtufXtyeXhiYw==/?ll=55.982101%2C54.737621&z=16" target="blank_">Яндекс карта</a>
 </p>
 <img src="Images/Яндекс.png" width="1000px" height="700px">
 </main>
