--- a/прайс.html
+++ b/прайс.html
@@ -32,10 +32,10 @@
 
     <li><a href="pdf/Прайс на декоративные и плодовые деревья, кустарники.pdf" target="blank_">Прайс на декоративные и плодовые деревья, кустарники.</a></li>
 
-    <li><a href="pdf/Прайс на комнатные растения.pdf target="blank_>Прайс на комнатные растения.</a></li>
+    <li><a href="pdf/Прайс на комнатные растения.pdf target="blank_">Прайс на комнатные растения.</a></li>
   
 
-  <li><a href="pdf/Прайс на научную литературу.pdf" target="blank_>Прайс на научную литературу.</a></li>
+  <li><a href="pdf/Прайс на научную литературу.pdf" target="blank_">Прайс на научную литературу.</a></li>
 
 
   <li><a href="pdf/Прайс на семена многолетних, лекарственных и ягодных культур.pdf" target="blank_">Прайс на семена многолетних, лекарственных и ягодных культур.</a></li>
