--- a/контакты.html
+++ b/контакты.html
@@ -45,7 +45,7 @@
 <p class="map2">
 	<a href="https://yandex.ru/maps/172/ufa/house/ulitsa_50_letiya_oktyabrya_34/YUwYfw9jTEUEQFtufXtyeXhiYw==/?ll=55.982101%2C54.737621&z=16" target="blank_">Яндекс карта</a>
 </p>
-<img src="Images/Яндекс.png" width="1000px" height="700px">
+<<img src="Images/яндекс.jpg" width="1200px" height="700px">
 </main>
 <!--  -->
 
