--- a/семинар.html
+++ b/семинар.html
@@ -44,6 +44,9 @@
 <img src="семинар/kPLj39gqT_Q.jpg" alt="" width="650px" height="600px">
 <img src="семинар/tyeyJbtw4_Q (1).jpg" alt="" width="650px" height="600px">
 <img src="семинар/Uj-PZPxb4dk (1).jpg" alt="" width="650px" height="600px">
+<img src="семинар/1.jpeg" alt="" width="650px" height="600px">
+<img src="семинар/2.jpeg" alt="" width="650px" height="600px">
+<img src="семинар/3.jpeg" alt="" width="650px" height="600px">
 </main>
 <!--  -->
 
