--- a/услуги.html
+++ b/услуги.html
@@ -41,6 +41,8 @@
 <img src="услуги/2.jpg" alt="" width="650px" height="600px">
 <img src="услуги/34uC-Yk1sSU.jpg" alt="" width="650px" height="600px">
 <img src="услуги/xAhPWEgVNOE.jpg" alt="" width="650px" height="600px">
+<img src="услуги/1.jpeg" alt="" width="650px" height="600px">
+<img src="услуги/3.jpeg" alt="" width="650px" height="600px">
 </main>
 <!--  -->
 
