--- a/прайс.html
+++ b/прайс.html
@@ -52,6 +52,8 @@
 
   <li><a href="pdf/Прайс на химические средства защиты и стимуляторы роста растений.pdf" target="blank_">Прайс на химические средства защиты растений и стимуляторы роста.</a></li>
   </ul>
+	<li><a href="pdf/Прайс (скидка)" target="blank_">Прайс на декоративные, плодовые деревья и кустарники(скидки).</a></li>
+  </ul>
 
 </div>
 
