--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     </nav>
 
 </header>
-
+<div class="koko">
+<hr>
+<p>Объявление</p>
+<p>С 30 по 7 ноября 2021г нерабочие дни</p>
+</div>
 <!--  -->
 <main>
 <section class="infosite">
