--- a/прайс.html
+++ b/прайс.html
@@ -52,7 +52,7 @@
 
   <li><a href="pdf/Прайс на химические средства защиты и стимуляторы роста растений.pdf" target="blank_">Прайс на химические средства защиты растений и стимуляторы роста.</a></li>
 
-	<li><a href="pdf/Прайс (скидка)" target="blank_">Прайс на декоративные, плодовые деревья и кустарники(скидки).</a></li>
+<li><a href="pdf/Распродажа саженцев.pdf" target="blank_">Распродажа саженцев: декоративных, плодовых деревьев и кустарников.</a></li>
   </ul>
 
 </div>
