--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <div class="koko">
 <hr>
 <p>Объявление</p>
-<p>Уважаемые, садоводы!!! Согласно Указу президента РФ Путина В.В. с 30 октября по 7 ноября объявлены нерабочими днями. В связи с чем Научно-консультационный садовый центр работать не будет. Однако возможна доставка саженцев плодовых и декоративных деревьев и кустарников, а также грунтов, удобрений, препаратов химзащиты и др., при покупке от 5000 руб. Каталог и прайс лист можно посмотреть на нашем сайте sad-bsau.ru, тел. 89279275156.
-</p>
+<p>Уважаемые, садоводы!!! Согласно Указу президента РФ Путина В.В. с 30 октября по 7 ноября объявлены нерабочими днями. В связи с чем Научно-консультационный садовый центр работать не будет. Однако возможна доставка саженцев плодовых и декоративных деревьев и кустарников, а также грунтов, удобрений, препаратов химзащиты и др., при покупке от 5000 руб. </p>
+<p>Товары со скидкой <a href="pdf/Распродажа саженцев.pdf" target="_blank"></a></p>
 </div>
 <!--  -->
 <main>
