--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     </nav>
 
 </header>
+		<div class="koko">
+	<img src="foto/WhatsApp Image 2022-03-31 at 19.06.38.jpeg" height="400px" width="600px">
+</div>
 <!--  -->
 <main>
 <section class="infosite">
