--- a/прайс.html
+++ b/прайс.html
@@ -53,6 +53,8 @@
   <li><a href="pdf/Прайс на химические средства защиты и стимуляторы роста растений.pdf" target="blank_">Прайс на химические средства защиты растений и стимуляторы роста.</a></li>
 
 <li><a href="pdf/Распродажа саженцев.pdf" target="blank_">Распродажа саженцев: декоративных, плодовых деревьев и кустарников.</a></li>
+	  <li><a href="pdf/prays-sadovy_tsentr_BGAU-2022-ovoschi.pdf" target="blank_">Прайс на овощи 2022.</a></li>
+  <li><a href="pdf/prays-sadovy_tsentr-2022-tsvety.pdf" target="blank_">Прайс на цветы 2022.</a></li>
   </ul>
 
 </div>
