--- a/прайс.html
+++ b/прайс.html
@@ -30,6 +30,7 @@
   <ul class="widget-list">
 	  <li><a href="pdf/prays-sadovy_tsentr_BGAU-2022-ovoschi.pdf" target="blank_">Прайс на овощи 2022.</a></li>
   <li><a href="pdf/prays-sadovy_tsentr-2022-tsvety.pdf" target="blank_">Прайс на цветы 2022.</a></li>
+<li><a href="pdf/prays_na_sazhentsy_skidki.pdf" target="blank_">Прайс на саженцы</a></li>
   </ul>
 
 </div>
