--- a/index.html
+++ b/index.html
@@ -36,9 +36,15 @@
 
 <!--  -->
 <main>
-<section class="infosite">
-	<h1>Научно-консультационный садовый центр Башкирского государственного аграрного университета (ФГБОУ ВО Башкирский ГАУ) рад приветствовать Вас на странице нашего сообщества!</h1>
-</section>
+	<h1 class="skidka">
+	Уважаемые, садоводы!!!
+<p>Научно-консультационный садовый центр БашГАУ</p>
+<p>объявляет распродажу на саженцы плодово-ягодных и декоративных культур!!! </p>
+<p>Мы ждем Вас!!! </p>
+<p>Добро пожаловать!!!</p>
+</h1>
+
+
 <aside class="thumb">
 <img src="foto/саженцы.jpg" height="200px" width="300px">
 <img src="foto/груша.jpg" height="200px" width="300px">
